# qsp-core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 02_agent_integration.py
javascript/: .gitignore  package.json
javascript/examples/: agent_integration_node.js
javascript/src/: index.ts  injector.ts  interpreter.ts  parser.ts
qsp_core/: __init__.py  injector.py  interpreter.py  parser.py
tests/: __init__.py  test_benchmark.py  test_injector.py  test_parser.py  test_qsp_lite.py
